add phone number in customer table
