# docs/swagger.yaml
@@ -130,14 +130,6 @@ paths:
         name: email
         required: true
         type: string
-      - description: id_type
-        in: formData
-        name: id_type
-        type: string
-      - description: id_promotor
-        in: formData
-        name: id_promotor
-        type: string
       - description: password
         in: formData
         name: password
@@ -151,6 +143,11 @@ paths:
       - description: birthday
         in: formData
         name: birthday
+        required: true
+        type: string
+      - description: phone_number
+        in: formData
+        name: phone_number
         required: true
         type: string
       produces:
