# internal/entity/customer.go
@@ -6,12 +6,13 @@ import (
 
 type (
 	Customer struct {
-		Id        uint      `gorm:"primary_key" json:"id"`
-		Name      string    `json:"name"`
-		Gender    string    `json:"gender"`
-		Birthday  string    `json:"birthday"`
-		CreatedAt time.Time `json:"created_at"`
-		UpdatedAt time.Time `json:"updated_at"`
+		Id          uint      `gorm:"primary_key" json:"id"`
+		Name        string    `json:"name"`
+		Gender      string    `json:"gender"`
+		Birthday    string    `json:"birthday"`
+		PhoneNumber string    `json:"phone_number"`
+		CreatedAt   time.Time `json:"created_at"`
+		UpdatedAt   time.Time `json:"updated_at"`
 	}
 )
 
